# Fast-Quadric-Mesh-Simplification

./: CMakeLists.txt
